--- a/Patient4.html
+++ b/Patient4.html
@@ -1,133 +1,231 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buttons anzeigen</title>
-<link rel="manifest" href="manifest.json">
-<style>
-/* ... (CSS bleibt unverändert) ... */
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buttons anzeigen</title>
+    <link rel="manifest" href="manifest.json">
+    <style>
+        body {
+            margin: 0;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            background-color: #f4f4f9;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 90%;
+            max-width: 600px;
+            margin-top: 40px; 
+            margin-bottom: 100px; 
+        }
+
+        .btn {
+            width: 90%;
+            max-width: 600px;
+            padding: 25px;
+            background-color: rgb(75, 78, 119);
+            color: aliceblue;
+            font-size: 1.5em;
+            font-weight: bold;
+            margin: 15px 0;
+            cursor: pointer;
+            text-align: center;
+            border-radius: 8px;
+            box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.5);
+            transition: background-color 0.3s ease;
+            line-height: 1.5;
+            position: relative;
+        }
+
+        .btn span {
+            display: block;
+            margin-top: 10px;
+            font-size: 0.9em;
+            color: white;
+            font-weight: bold;
+        }
+
+        .btn:hover {
+            background-color: rgb(100, 100, 150);
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        #einsatzabbruchButton {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 15px 30px;
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            font-size: 1.2em;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2000; /* Sicherstellen, dass der Button immer sichtbar bleibt */
+        }
+
+        #einsatzabbruchButton:hover {
+            background-color: #c0392b;
+        }
+
+        #modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        #modalContent {
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            max-width: 90%;
+        }
+
+        #modal img {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 8px;
+        }
+
+        #modal span {
+            display: block;
+            margin-top: 10px;
+            color: #e74c3c;
+            font-size: 1.2em;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
- <button id="btn1" class="btn">
-  Patientin W 25 Jahre alt. Pat steht unter Schock hat den PKW bereits selber verlassen. Und hält sich den Arm.
- </button>
- <button id="btn2" class="btn hidden">
-  Die Patientin gibt Schmerzen im Arm und im Thorax an. Ausgelöst durch den Gurt beim Aufprall. Der Arm weist eine Fehlstellung auf.
- </button>
- <button id="btnCountdown1" class="btn hidden">
-  Sofortmaßnahme einleiten? ja:
-  <span id="countdown1" class="countdown">30</span>
- </button>
- <button id="btnCountdown2" class="btn hidden">
-  Sofortmaßnahme einleiten? nein:
-  <span id="countdown2" class="countdown">30</span>
- </button>
- <button id="btn3" class="btn hidden">
-  Die Patientin klagt weiter über Schmerzen. Scheint sonst aber stabil zu sein.
- </button>
- <button id="btn4" class="btn hidden">
-  Sichtungskategorie wählen und zum nächsten Patienten!
- </button>
 
- <div id="modal">
-  <div id="modalContent">
-   <span id="closeModal" style="cursor: pointer; font-size: 20px; font-weight: bold;">× Schließen</span>
-   <img id="VU Fraktur Arm" src="VU Fraktur Arm.jpg" alt="VU Fraktur Arm">
-  </div>
- </div>
+<!-- Buttons -->
+<div class="button-container">
+    <button id="btn1" class="btn">
+        Pat. W 25 Jahre alt.<br>Die Pat. wirkt sehr verwirrt un aufgeregt<br>Sie konnte den PKW bereits selber verlassen.<br>Die Pat. hält sich den Arm vor Schmerzen.
+        <span>⬇ Weitere Informationen</span>
+    </button>
+    <button id="btn2" class="btn hidden">
+        Die Pat. gibt weiter Schmerzen im Thoraxbereich an.<br>Ausgelöst durch den Gurt im PKW.<br>Der Arm weist eine sichtbare geschlossene Fehlstellung vor.
+        <span>⬇ Weitere Informationen</span>
+    </button>
+    <button id="btnCountdown1" class="btn hidden">
+        Sofortmaßnahme einleiten? Ja<br><span id="countdown1" class="countdown"></span>
+    </button>
+    <button id="btnCountdown2" class="btn hidden">
+        Sofortmaßnahme einleiten? Nein<br><span id="countdown2" class="countdown"></span>
+    </button>
+    <button id="btn3" class="btn hidden">
+        Die Pat. gibt weiter Schmerzen an.<br>Sonst scheint sie stabil zu sein.
+        <span>⬇ Weitere Informationen</span>
+    </button>
+    <button id="btn4" class="btn hidden">
+        Sichtungskategorie wählen<br>und zum nächsten Patienten!
+    </button>
+</div>
 
- <script>
- let countdownIntervals = {};
+<!-- Modal für Bildanzeige -->
+<div id="modal">
+    <div id="modalContent">
+        <img src="VU Fraktur Arm.jpg" alt="VU Fraktur Arm">
+        <span id="closeModal">Schließen</span>
+    </div>
+</div>
 
- function toggleButtons(currentButtonId, nextButtonId) {
-     document.getElementById(currentButtonId).classList.add("hidden");
-     document.getElementById(nextButtonId).classList.remove("hidden");
- }
+<!-- Einsatzabbruch-Button -->
+<a href="index.html" id="einsatzabbruchButton">Einsatzabbruch</a>
 
- function startCountdown(buttonId, countdownId, nextButtonId, otherButtonId, seconds) {
-     let countdownElement = document.getElementById(countdownId);
-     let timeLeft = seconds;
-     countdownElement.style.visibility = "visible";
-     countdownElement.innerText = timeLeft;
-     document.getElementById(buttonId).disabled = true;
-     document.getElementById(otherButtonId).disabled = true;
-     countdownIntervals[buttonId] = setInterval(() => {
-         timeLeft--;
-         countdownElement.innerText = timeLeft;
-         if (timeLeft <= 0) {
-             clearInterval(countdownIntervals[buttonId]);
-             document.getElementById(buttonId).classList.add("hidden");
-             document.getElementById(otherButtonId).classList.add("hidden");
-             document.getElementById(nextButtonId).classList.remove("hidden");
-         }
-     }, 1000);
- }
+<script>
+    let countdownIntervals = {};
 
- function resetAll() {
-     for (let interval in countdownIntervals) {
-         clearInterval(countdownIntervals[interval]);
-     }
-     countdownIntervals = {};
-     document.getElementById("btn1").classList.remove("hidden");
-     document.getElementById("btn2").classList.add("hidden");
-     document.getElementById("btnCountdown1").classList.add("hidden");
-     document.getElementById("btnCountdown2").classList.add("hidden");
-     document.getElementById("btn3").classList.add("hidden");
-     document.getElementById("btn4").classList.add("hidden");
-     document.getElementById("countdown1").innerText = "30";
-     document.getElementById("countdown1").style.visibility = "hidden";
-     document.getElementById("countdown2").innerText = "30";
-     document.getElementById("countdown2").style.visibility = "hidden";
-     document.getElementById("btnCountdown1").disabled = false;
-     document.getElementById("btnCountdown2").disabled = false;
- }
+    function toggleButtons(currentButtonId, nextButtonId) {
+        document.getElementById(currentButtonId).classList.add("hidden");
+        document.getElementById(nextButtonId).classList.remove("hidden");
+    }
 
- document.getElementById("btn1").addEventListener("click", function() {
-     toggleButtons("btn1", "btn2");
- });
+    function startCountdown(buttonId, countdownId, nextButtonId, otherButtonId, seconds) {
+        let countdownElement = document.getElementById(countdownId);
+        let timeLeft = seconds;
+        countdownElement.style.visibility = "visible";
+        countdownElement.innerText = timeLeft;
+        document.getElementById(buttonId).disabled = true;
+        document.getElementById(otherButtonId).disabled = true;
 
- document.getElementById("btn2").addEventListener("click", function() {
-     toggleButtons("btn2", "btnCountdown1");
-     document.getElementById("btnCountdown2").classList.remove("hidden");
-     document.getElementById("modal").style.display = "flex"; // Modal anzeigen
- });
+        countdownIntervals[buttonId] = setInterval(() => {
+            timeLeft--;
+            countdownElement.innerText = timeLeft;
+            if (timeLeft <= 0) {
+                clearInterval(countdownIntervals[buttonId]);
+                document.getElementById(buttonId).classList.add("hidden");
+                document.getElementById(otherButtonId).classList.add("hidden");
+                document.getElementById(nextButtonId).classList.remove("hidden");
+            }
+        }, 1000);
+    }
 
- document.getElementById("btnCountdown1").addEventListener("click", function() {
-     startCountdown("btnCountdown1", "countdown1", "btn3", "btnCountdown2", 30); // Countdown 30 Sekunden
- });
+    function redirectToIndex() {
+        window.location.href = "index.html";
+    }
 
- document.getElementById("btnCountdown2").addEventListener("click", function() {
-     startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 5); // Countdown 5 Sekunden
- });
+    document.getElementById("btn1").addEventListener("click", function () {
+        toggleButtons("btn1", "btn2");
+    });
 
- document.getElementById("btn3").addEventListener("click", function() {
-     toggleButtons("btn3", "btn4");
- });
+    document.getElementById("btn2").addEventListener("click", function () {
+        toggleButtons("btn2", "btnCountdown1");
+        document.getElementById("btnCountdown2").classList.remove("hidden");
+        document.getElementById("modal").style.display = "flex"; // Bild wird angezeigt
+    });
 
- document.getElementById("btn4").addEventListener("click", function() {
-     resetAll();
- });
+    document.getElementById("btnCountdown1").addEventListener("click", function () {
+        startCountdown("btnCountdown1", "countdown1", "btn3", "btnCountdown2", 30);
+    });
 
- document.getElementById("VU Fraktur Arm").addEventListener("click", function() {
-     document.getElementById("modal").style.display = "none";
- });
+    document.getElementById("btnCountdown2").addEventListener("click", function () {
+        startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 5);
+    });
 
- document.getElementById("closeModal").addEventListener("click", function() {
-     document.getElementById("modal").style.display = "none";
- });
+    document.getElementById("btn3").addEventListener("click", function () {
+        toggleButtons("btn3", "btn4");
+    });
 
- window.onclick = function(event) {
-     if (event.target === document.getElementById("modal")) {
-         document.getElementById("modal").style.display = "none";
-     }
- }
+    document.getElementById("btn4").addEventListener("click", function () {
+        redirectToIndex();
+    });
 
- window.addEventListener("keydown", function(event) {
-     if (event.key === "Escape") {
-         document.getElementById("modal").style.display = "none";
-     }
- });
- </script>
+    // Schließen des Bildes durch Klick auf das Bild
+    document.getElementById("closeModal").addEventListener("click", function () {
+        document.getElementById("modal").style.display = "none";
+    });
+
+    // Schließen des Bildes durch Klick auf das Modal
+    document.getElementById("modal").addEventListener("click", function (e) {
+        if (e.target === document.getElementById("modal")) {
+            document.getElementById("modal").style.display = "none";
+        }
+    });
+</script>
+
 </body>
 </html>
